# device-os

./: .buildpackrc  .bundleignore  .clang-format  .cproject  .dockerignore  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  ISSUE_TEMPLATE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  STYLE_GUIDE.md  coap_latency_working.diff  coaplatency_sergey.diff  dependencies.gv  documentation.md  final_coaplatency_timers.diff  license.txt  makefile  refactor.md  release-mesh.sh  setenv.sh  testSparkCoreCommunication  version.semver.json
communication/: .gitignore  CMakeLists.txt  Makefile  README.md  dtls.md  import.mk  makefile  tests.mk
communication/inc/: buffer_message_channel.h  coap.h  coap_api.h  coap_channel_new.h  coap_defs.h  coap_util.h  communication_dynalib.h  device_keys.h  dsakeygen.h  dtls_message_channel.h  dtls_session_persist.h  events.h  file_transfer.h  message_channel.h  messages.h  protocol.h  protocol_defs.h  protocol_selector.h  spark_descriptor.h  spark_protocol_functions.h  tls_callbacks.h
communication/src/: buffer_message_channel.h  build.mk  chunked_transfer.cpp  chunked_transfer.h  coap.cpp  coap.h  coap_channel.cpp  coap_channel.h  coap_channel_new.cpp  coap_channel_new.h  coap_defs.cpp  coap_defs.h  coap_message_decoder.cpp  coap_message_decoder.h  coap_message_encoder.cpp  coap_message_encoder.h  coap_option.cpp  coap_option.h  coap_util.cpp  coap_util.h  communication_diagnostic.cpp  communication_diagnostic.h  communication_dynalib.cpp  communication_dynalib.h  core_protocol.cpp  core_protocol.h  description.cpp  description.h  device_keys.h  dsakeygen.cpp  dsakeygen.h  dtls_message_channel.cpp  dtls_message_channel.h  dtls_protocol.cpp  dtls_protocol.h  dtls_session_persist.h  eckeygen.cpp  eckeygen.h  events.cpp  events.h  (+55 more)
communication/tests/: ConstructorFixture.cpp  ConstructorFixture.h  Main.cpp  TestAES.cpp  TestCoAP.cpp  TestDescriptor.cpp  TestEvents.cpp  TestHandshake.cpp  TestQueue.cpp  TestSparkProtocol.cpp  TestStateMachine.cpp  TestStubs.cpp  TestUserFunctions.cpp
crypto/: CMakeLists.txt  import.mk  makefile
crypto/inc/: crypto_dynalib.h  include.mk  mbedtls_communication.inc  mbedtls_compat.h  mbedtls_config.h  mbedtls_config_common.h  mbedtls_config_default.h  mbedtls_config_photon.h  mbedtls_util.h  mbedtls_weaken.h
crypto/src/: build.mk  mbedtls_util.cpp
hal/: CMakeLists.txt  build.mk  import.mk  makefile
hal/inc/: adc_hal.h  adc_hal_compat.h  at_dtm_hal.h  audio_hal.h  backup_ram_hal.h  ble_hal.h  ble_hal_api.h  ble_hal_defines.h  ble_hal_legacy.h  bootloader.h  bootloader_hal.h  button_hal.h  can_hal.h  cellular_hal.h  cellular_hal_cellular_global_identity.h  cellular_hal_constants.h  cellular_hal_utilities.h  concurrent_hal.h  core_hal.h  core_subsys_hal.h  dac_hal.h  delay_hal.h  device_code.h  deviceid_hal.h  deviceid_hal_compat.h  dfu_hal.h  eeprom_hal.h  enums_hal.h  exflash_hal.h  exrtc_hal.h  flash_hal.h  gnss_hal.h  gpio_hal.h  gpio_hal_compat.h  hal_cellular_global_identity.h  hal_dynalib.h  hal_dynalib_at_dtm.h  hal_dynalib_audio.h  hal_dynalib_backup_ram.h  hal_dynalib_ble.h  (+91 more)
hal/shared/: cellular_enums_hal.h  cellular_ncp_dev_mapping.h  cellular_reg_status.h  cellular_sig_perc_mapping.cpp  cellular_sig_perc_mapping.h  demux.cpp  demux.h  filesystem.cpp  filesystem.h  flash_common.cpp  flash_common.h  flash_device_hal.h  hal_event.h  include.mk  inflate.cpp  inflate_impl.cpp  inflate_impl.h  ledcontrol.h  mcp23s17.cpp  mcp23s17.h  module_info_hal.h  newlib_impure.cpp  newlib_impure.h  parse_server_address.h  platform_ncp.cpp  platform_ncp.h  platforms.h  power_hal.cpp  spi_lock.h  static_recursive_cs.h  system_tick_hal.h  time_compat.cpp  time_compat.h
hal/soft-ap/: main.js  package.json  settings.js  softapmock.js
hal/src/: adc_hal.c  build.mk  delay_hal.c  eeprom_hal.c  pwm_hal.c  rtc_hal.c  socket_hal.c  spi_hal.c  timer_hal.c  wlan_hal.c
main/: CMakeLists.txt  build.mk  combined_BM-09.elf  combined_BM-14.elf  device.der  device.pem  device.pub.pem  import.mk  makefile  setupBit.hex
main/inc/: application.h
main/src/: application.cpp  build.mk  main.cpp
main/tests/: readme.md
newlib_nano/: CMakeLists.txt  build.mk  import.mk  makefile
newlib_nano/src/: custom-nano-4.8.4.specs  custom-nano.specs  malloc.c  malloc.cpp  mallocr.c  sources.mk
platform/: CMakeLists.txt  import.mk  makefile
platform/MCU/: build.mk
platform/NET/: build.mk
platform/shared/: platforms.h
services/: CMakeLists.txt  import.mk  makefile  readme.md
services/inc/: addr_util.h  align_util.h  allocator.h  appender.h  atclient.h  atomic_flag_mutex.h  atomic_section.h  bcd_to_dec.h  bspatch.h  buffer.h  bytes2hexbuf.h  c_string.h  case_conv.h  check.h  combine_hash.h  completion_handler.h  config.h  custom_dynalib.h  dcd.h  dct_file.h  debug.h  debug_util.h  devicetree_stubs.h  diagnostic.h  diagnostics.h  dynalib.h  eeprom_emulation.h  endian_util.h  enumclass.h  enumflags.h  file.h  file_queue.h  file_util.h  filesys.h  fixed_queue.h  flash_storage.h  hex_to_bytes.h  icmp_echo.h  include.mk  intrusive_list.h  (+54 more)
services/src/: addr_util.cpp  atclient.cpp  bspatch.cpp  build.mk  completion_handler.cpp  custom_dynalib.c  debug.c  debug_util.cpp  devicetree_stubs.cpp  diagnostic.cpp  diagnostics.cpp  file_util.cpp  filesys.cpp  jsmn.c  jsmn_compat.c  led_service.cpp  logging.cpp  monitor_service.cpp  nanopb_misc.c  ncp_fw_update.cpp  ncp_fw_update_db.cpp  panic.c  printf_export.c  rgbled.c  scanf_export.c  security_mode.cpp  services_dynalib.c  simple_file_storage.cpp  simple_ntp_client.cpp  str_compat.cpp  str_util.cpp  stream.cpp  stream_util.cpp  system_cache.cpp  system_error.cpp  thread_runner.cpp  tlv_file.cpp  tracer_service.cpp  xmodem_sender.cpp
system/: CMakeLists.txt  import.mk  makefile  system-flags.md  system-threading.md  system-versions.md
system/inc/: active_object.h  (+44 more)
user/: CMakeLists.txt  build.mk  import.mk  makefile
wiring/: CMakeLists.txt  import.mk  makefile
wiring_globals/: CMakeLists.txt  import.mk  makefile
(+6314 files in other folders)
